datasets/dataset_txt/certbot/certbot_3200.txt
centminmod commented on 24 Oct 2015
I know Python 2.6 isn't supported so need to use Python 2.7 which I installed beside CenTOS 6.7's default Python 2.6.6 at python2.7 and that previously worked with web root authentication at https://community.centminmod.com/posts/19325/
however, it no longer works with CentOS 6.7 + python 2.7
i did the following for install by sed replacing virtualenv with python2.7
cd /root/tools
git clone https://github.com/letsencrypt/letsencrypt
cd letsencrypt
sed -i "s|--python python2|--python python2.7|" letsencrypt-auto
./letsencrypt-auto --verbose

./letsencrypt-auto --verbose
Updating letsencrypt and virtual environment dependencies...
Requirement already up-to-date: setuptools in /root/.local/share/letsencrypt/lib/python2.6/site-packages
/root/.local/share/letsencrypt/lib/python2.6/site-packages/pip/_vendor/requests/packages/urllib3/util/ssl_.py:90: InsecurePlatformWarning: A true SSLContext object is not available. This prevents urllib3 from configuring SSL     appropriately and may cause certain SSL connections to fail. For more information, see https://urllib3.readthedocs.org/en/latest/security.html#insecureplatformwarning.
  InsecurePlatformWarning
Requirement already up-to-date: pip in /root/.local/share/letsencrypt/lib/python2.6/site-packages
Collecting letsencrypt
  Using cached letsencrypt-0.0.0.dev20151021-py2-none-any.whl
Collecting letsencrypt-apache
  Using cached letsencrypt_apache-0.0.0.dev20151021-py2-none-any.whl
Collecting zope.interface (from letsencrypt)
  Using cached zope.interface-4.1.3.tar.gz
Requirement already up-to-date: setuptools in /root/.local/share/letsencrypt/lib/python2.6/site-packages (from letsencrypt)
Collecting python2-pythondialog>=3.2.2rc1 (from letsencrypt)
  Using cached python2-pythondialog-3.3.0.tar.bz2
Collecting PyOpenSSL (from letsencrypt)
  Using cached pyOpenSSL-0.15.1-py2.py3-none-any.whl
Collecting requests (from letsencrypt)
  Using cached requests-2.8.1-py2.py3-none-any.whl
Collecting pyrfc3339 (from letsencrypt)
  Using cached pyRFC3339-0.2.tar.gz
Collecting acme==0.0.0.dev20151021 (from letsencrypt)
  Using cached acme-0.0.0.dev20151021-py2-none-any.whl
Collecting configobj (from letsencrypt)
  Using cached configobj-5.0.6.tar.gz
Collecting pytz (from letsencrypt)
  Using cached pytz-2015.6-py2.py3-none-any.whl
Collecting psutil>=2.1.0 (from letsencrypt)
  Using cached psutil-3.2.2.tar.gz
Collecting six (from letsencrypt)
  Using cached six-1.10.0-py2.py3-none-any.whl
Collecting cryptography>=0.7 (from letsencrypt)
  Using cached cryptography-1.0.2.tar.gz
Collecting zope.component (from letsencrypt)
  Using cached zope.component-4.2.2.tar.gz
Collecting mock (from letsencrypt)
  Using cached mock-1.3.0-py2.py3-none-any.whl
Collecting ConfigArgParse (from letsencrypt)
  Using cached ConfigArgParse-0.9.3.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 20, in <module>
      File "/tmp/pip-build-mdwUEl/ConfigArgParse/setup.py", line 1, in <module>
        import configargparse
      File "configargparse.py", line 16
        ACTION_TYPES_THAT_DONT_NEED_A_VALUE = {argparse._StoreTrueAction,
                                                                        ^
    SyntaxError: invalid syntax

    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in /tmp/pip-build-mdwUEl/ConfigArgParse
maybe it should be python2.7 instead ?
Command "python2.7 setup.py egg_info" failed with error code 1 in /tmp/pip-build-mdwUEl/ConfigArgParse
pip paths
locate bin/pip
/root/.local/share/letsencrypt/bin/pip
/root/.local/share/letsencrypt/bin/pip2
/root/.local/share/letsencrypt/bin/pip2.6
/usr/bin/pip2.7